Fix z-index for Play, to be above Inject btns, but below modals

--- a/src/components/Editor/css/PlayContainer.css
+++ b/src/components/Editor/css/PlayContainer.css
@@ -10,4 +10,6 @@
   justify-content: end;
   align-items: center;
   padding-right: 15px;
+
+  z-index: 50;
 }
